--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
+bin/
 build/
 develop-eggs/
 dist/
@@ -56,3 +57,7 @@ docs/_build/
 
 # PyBuilder
 target/
+
+.env
+
+include/
